# ResumeAI

./: .env  profile.md  pyproject.toml
.streamlit/: config.toml
notebooks/: experiments.ipynb  jobs.ipynb  module-test.ipynb
notebooks/.ipynb_checkpoints/: module-test-checkpoint.ipynb
src/resumeai/: __init__.py  models.py  openai.py  utils.py
templates/TLCresume/: _header.tex  resume.tex.j2
templates/TLCresume/sections/: activities.tex.j2  education.tex.j2  experience.tex.j2  skills.tex.j2
