[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.4.2"}
openai = { version = "1.2.4" }
instructor = "^0.3.4"
rich = "^13.6.0"
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.24"
llama-index = "^0.9.12"
unstructured = {extras = ["html"], version = "^0.11.2"}
selenium = "^4.15.2"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
streamlit = "^1.29.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jinja2 = "^3.1.2"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
